--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,4 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +9,27 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar {
+  display: flex;
+  list-style-type: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #2E8B57;
+  width: 100vw;
+  margin: 0;
+}
+
+.navbarTab {
+  margin: 1rem;
+  color: white;
+  font-size: large;
+  font-weight: bold;
+}
+
+.wsuLogo {
+  width: 20%;
+  height: auto;
 }
