--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed:wght@400;700&display=swap');
+
+:root {
+  --clr-WSU-dark-gold: #FDC741;
+  --clr-WSU-light-gold: #FCE3A3;
+  --clr-WSU-dark-green: #10594E;
+  --clr-WSU-light-green: #4B8076;
+  --clr-light-gray: #B0B0B0;
+  --clr-dark-gray: #7E7E7E;
+
+  --ff-regular: 'Roboto', sans-serif;
+  --ff-condensed: 'Roboto Condensed', sans-serif;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+  font-family: var(--ff-regular);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior-x: none;
+  overflow:auto;
 }
 
 code {
@@ -11,34 +29,27 @@ code {
     monospace;
 }
 
-.navbar {
-  display: flex;
-  list-style-type: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #2E8B57;
-  width: 100vw;
+button {
+  border: none;
   margin: 0;
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
-.navbarTab {
-  margin: 1rem;
-  color: white;
-  font-size: large;
+button:focus, input:focus {
+  outline: 2px solid #000;
+  z-index: 999;
+}
+
+/* utilities */
+.ff-condensed {
+  font-family: var(--ff-condensed);
+}
+
+.fw-bold {
   font-weight: bold;
-}
-
-.wsuLogo {
-  width: 20%;
-}
-
-.leaflet-container {
-  height: 100vh;
-  width: 35vw;
-  position: fixed;
-  right: 0;
-  top: 4.8rem;
 }
 
 .homepageContainer {
@@ -48,4 +59,79 @@ code {
 
 .homepage {
   min-height: 100vh;
+}
+
+/* navbar */
+.navbar {
+  align-items: center;
+  box-sizing: border-box;
+  background-color: var(--clr-WSU-dark-green);
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  left: 0;
+  margin: 0;
+  padding: .75rem 2.1875rem;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.nav-item {
+  color: white;
+  font-size: 1.125rem;
+}
+
+.site-logo {
+  color: var(--clr-WSU-dark-gold);
+  font-size: 2.25rem;
+  text-decoration: none;
+}
+
+.site-logo:hover {
+  color: var(--clr-WSU-light-gold);
+}
+
+/* searchbar */
+::placeholder, ::-webkit-input-placeholder, ::-moz-placeholder, :-ms-input-placeholder {
+  color: var(--clr-light-gray);
+}
+.search-bar {
+  display: block;
+  max-width: 336px;
+  display: flex;
+  height: 37px;
+  width: 336px;
+}
+
+.search-box {
+  width: 100%;
+  position: relative;
+}
+
+.search-box > input {
+  border: 1px solid var(--clr-light-gray);
+  border-radius: 2px 0px 0px 2px;
+  box-sizing: border-box;
+  font-size: 1rem;
+  height: 100%;
+  padding: 2px 0 0 8px;
+  width: 100%;
+}
+
+.search-btn {
+  aspect-ratio: 1 / 1;
+  align-items: center;
+  background-color: var(--clr-WSU-dark-gold);
+  display: flex;
+  justify-content: center;
+}
+
+/* map */
+.leaflet-container {
+  height: 100vh;
+  width: 35vw;
+  position: fixed;
+  right: 0;
+  top: 4.8rem;
 }
