--- a/client/src/index.css
+++ b/client/src/index.css
@@ -195,3 +195,72 @@ commented this out for now
   display: grid;
   grid-template-columns: 20% 1.25fr 1fr;
 } */
+
+.loginPopupContainer {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  padding-top: 100px;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.loginPopupForm {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border-radius: 4px;
+  max-width: 40vw;
+  height: 60vh;
+  text-align: center;
+}
+
+.wsulogo {
+  height: 15vh;
+  width: auto;
+}
+
+.inputForLogin{
+  width: 20vw;
+  padding: 10px 20px;
+  margin: 1rem 1rem;
+  border: 1px solid var(--clr-WSU-dark-green);
+  border-radius: 4px;
+}
+
+.loginButton {
+  color: white;
+  background-color: #10594E;
+  border-radius: 10px;
+  padding: 0.75rem;
+  font-size: large;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.loginButton:hover {
+  color: var(--clr-WSU-dark-gold)
+}
+
+.signupButton {
+  color: var(--clr-WSU-dark-green);
+  background-color: var(--clr-WSU-dark-gold);
+  border-radius: 10px;
+  padding: 0.75rem;
+  font-size: large;
+  font-weight: bold;
+  margin: 1rem;
+}
+
+.signupButton:hover {
+  color: white;
+}
+
+.closeX {
+  text-align: right;
+  font-size: larger;
+  font-weight: bolder;
+}
