--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,13 +16,14 @@
 
 body {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif; */
   font-family: var(--ff-regular);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior-x: none;
-  overflow:auto;
+  overflow-x: hidden;
+  overflow-y: scroll;
   margin: 0;
   min-height: 100vh;
 }
@@ -61,24 +62,45 @@ button:focus, input:focus {
   z-index: 999;
 }
 
+h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0 0 .25rem;
+}
+
 /* --------------------- */
 /* Layout Containers     */
 /* --------------------- */
 /*#region*/
 .content-container {
+  background-color: white;
   box-sizing: border-box;
-  width: 60vw;
+  box-shadow: 0 4px 10px 1px rgba(0, 0, 0, .6);
+  width: 60%;
   padding: 30px 38px 0 38px;
-  height: 100%;
+  position: absolute;
+  left: 0;
+  top: var(--navbar-height);
+  z-index: 2;
 }
 
 /* map */
 .leaflet-container {
   height: 100%;
-  width: 40vw;
+  width: 40%;
   position: fixed;
   right: 0;
   top: var(--navbar-height);
+}
+
+@media screen and (max-width: 960px) {
+  .content-container {
+    width: 100%;
+  }
+
+  .leaflet-container {
+    display: none;
+  }
 }
 /*#endregion*/
 
@@ -92,6 +114,15 @@ button:focus, input:focus {
 
 .fw-bold {
   font-weight: bold;
+}
+
+/* REQUIRES: width, height, line-height, and -webkit-line-clap to be defined */
+.nowrap-ellipsis {
+  display: block; /* Fallback for non-webkit */
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 /*#endregion*/
 
@@ -137,7 +168,7 @@ button:focus, input:focus {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
 }
 
 .navbar button:hover {
@@ -244,43 +275,56 @@ button:focus, input:focus {
 /* Parking Structure Quick View Card */
 /*#region*/
 .quick-view-card {
-  width: 50vw;
-  height: auto;
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 5px 15px rgb(209, 207, 207);
-  margin-top: 1rem;
+  box-sizing: border-box;
+  border: 1px solid var(--clr-light-gray);
+  border-radius: 5px;
   display: flex;
+  font-size: 1.125rem;
+  gap: 20px;
+  /* max-height: 227px; */
+  max-width: fit-content;
+  margin-top: 1rem;
+  padding: 20px;
+  width: 100%;
 }
 
 .quick-view-card:hover {
   cursor: pointer;
-  box-shadow: 0 5px 15px rgb(87, 87, 87);
+  box-shadow: 0 0 6px 2px rgba(0, 0, 0, .4);
+}
+
+.quick-view-card > img {
+  aspect-ratio: 1 / 1;
+  object-fit: fill;
+  max-height: 220px;
+}
+
+.quick-view-card__subhead {
+  color: var(--clr-dark-gray);
+  display: block; /* Fallback for non-webkit */
+  margin: 0 0 3px;
+  max-width: 100%;
+  height: calc(1.125rem * 1.2 * 2); /* Fallback for non-webkit */
+  line-height: 1.2;
+  -webkit-line-clamp: 2;
 }
 
 .quick-view-card__info {
   text-align: left;
-  margin-left: 2rem;
-}
-
-.quick-view-card__title {
-  font-size: x-large;
-  font-weight: bolder;
-}
-
-.greenSpan {
-  color: green;
-  font-weight: bold;
-  margin-top: 1rem;
-}
-
-.quick-view-card__address {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
 }
 
 .quick-view-card__description {
-  margin-bottom: 0.5rem;
+  color: var(--clr-dark-gray);
+  margin: 0.75rem 0;
+  max-width: 100%;
+  height: calc(1.125rem * 1.2 * 3); /* Fallback for non-webkit */
+  line-height: 1.2;
+  -webkit-line-clamp: 3;
+}
+
+.greenSpan {
+  color: #028D53;
+  font-weight: bold;
 }
 /*#endregion*/
 
@@ -327,5 +371,10 @@ button:focus, input:focus {
 .wsulogo {
   height: 15vh;
   width: auto;
+}
+
+.rating {
+  z-index: 1;
+  line-height: 30px;
 }
 /*#endregion*/
