--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,6 +62,12 @@ button:focus, input:focus {
   z-index: 999;
 }
 
+h1 {
+  font-size: 2.25rem;
+  font-weight: bold;
+  margin: 0 0 .25rem;
+}
+
 h2 {
   font-size: 1.5rem;
   font-weight: bold;
@@ -77,7 +83,7 @@ h2 {
   box-sizing: border-box;
   box-shadow: 0 4px 10px 1px rgba(0, 0, 0, .6);
   width: 60%;
-  padding: 30px 38px 0 38px;
+  padding: 30px;
   position: absolute;
   left: 0;
   top: var(--navbar-height);
@@ -281,7 +287,6 @@ h2 {
   display: flex;
   font-size: 1.125rem;
   gap: 20px;
-  /* max-height: 227px; */
   max-width: fit-content;
   margin-top: 1rem;
   padding: 20px;
