--- a/client/src/index.css
+++ b/client/src/index.css
@@ -92,11 +92,12 @@ h2 {
   background-color: white;
   box-sizing: border-box;
   box-shadow: 0 4px 10px 1px rgba(0, 0, 0, .6);
-  width: 60%;
+  left: 0;
+  min-height: 100%;
   padding: 30px;
   position: absolute;
-  left: 0;
   top: var(--navbar-height);
+  width: 60%;
   z-index: 2;
 }
 
@@ -140,6 +141,11 @@ h2 {
 
 .fw-bold {
   font-weight: bold;
+}
+
+.hoverable-card:hover {
+  cursor: pointer;
+  box-shadow: 0 0 6px 2px rgba(0, 0, 0, .4);
 }
 
 /* REQUIRES: --font-size, --line-height, and --num-lines, and max-width to be defined */
@@ -276,6 +282,27 @@ h2 {
 }
 /*#endregion*/
 
+/* Reivews on the My Reviews page */
+.my-review-card {
+  margin: 0 0 50px 0;
+}
+.my-review-card > div {
+  display: flex;
+  gap: 15px;
+  margin: 5px 2px 7px 0;
+}
+
+.my-review-card button {
+  background: none;
+  color: var(--clr-WSU-dark-green);
+  font-weight: bold;
+  padding: 0;
+}
+
+.my-review-card button:hover {
+  color: var(--clr-WSU-light-green);
+}
+
 /* Parking Structure Detail Card */
 /*#region*/
 .detail-card {
@@ -340,11 +367,6 @@ h2 {
   padding: 20px;
   scroll-margin-top: calc(var(--navbar-height) + 20px);
   width: 100%;
-}
-
-.quick-view-card:hover {
-  cursor: pointer;
-  box-shadow: 0 0 6px 2px rgba(0, 0, 0, .4);
 }
 
 .quick-view-card > img {
