--- a/client/src/index.css
+++ b/client/src/index.css
@@ -457,6 +457,15 @@ h2 {
   color: var(--clr-dark-gray)
 }
 
+.profile-picture {
+  /* background-color: green; */
+  display: block;
+  height: 82px;
+  position: relative;
+  width: 82px;
+  border-radius: 50%;
+}
+
 .placeholder-profile-picture {
   background-color: green;
   display: block;
