--- a/client/src/index.css
+++ b/client/src/index.css
@@ -604,3 +604,33 @@ h2 {
   line-height: 30px;
 }
 /*#endregion*/
+
+/* Review Modal */
+/*#region*/
+.review-modal {
+  align-items: center;
+  background-color: #fefefe;
+  border-radius: 10px;
+  box-shadow: 0 0 7px 3px rgba(0, 0, 0, .25);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  height: 60%;
+  max-height: 350px;
+  max-width: 500px;
+  padding: 21px 56px 28px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.review-modal > textarea {
+  height: 60%;
+  width: 100%;
+  margin: 0;
+}
+
+textarea {
+  font: inherit;
+}
